# stenopy

./: .gitignore  README.md  checkpoint.py  diarization.py  main.py  pyproject.toml  remap.py  transcriber.py
docs/plans/: 2025-12-18-pause-based-transcription-design.md  2025-12-18-pause-based-transcription-implementation.md  2025-12-18-transcription-cli-design.md  2025-12-18-transcription-cli-implementation.md
