[project]
name = "transcription"
version = "0.2.0"
description = "D&D session transcription with pause-based paragraph detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "tqdm>=4.66",
    "nvidia-cudnn-cu12>=9.1; sys_platform == 'linux'",
    "nvidia-cublas-cu12>=12.0; sys_platform == 'linux'",
]
